Calculate area - Practice Task

--- a/mod1/controlFlow/practice_task.html
+++ b/mod1/controlFlow/practice_task.html
@@ -7,6 +7,6 @@
   </head>
   <body>
     <h1>Control Flow and Conditional Statements - Practice Task</h1>
-    <script src="./practice_task.js"></script>
+    <script src="./practice_task-ca.js"></script>
   </body>
 </html>
