Product Survey - Practice Task

--- a/mod1/productSurvey/product_survey.html
+++ b/mod1/productSurvey/product_survey.html
@@ -36,6 +36,15 @@
       required
     ></textarea
     ><br />
+    <label for="userExperienceText">Experience with Product:</label><br />
+    <textarea
+      id="userExperienceText"
+      rows="5"
+      cols="30"
+      placeholder="Enter your experience here"
+      required
+    ></textarea
+    ><br />
     <button id="submitBtn">Submit Feedback</button>
     <hr />
     <div id="userInfo" style="display: none">
@@ -48,6 +57,10 @@
       <p>
         Feedback for <span id="userProductChoice"></span>:
         <span id="userFeedback"></span>
+      </p>
+      <p>
+        Experience with <span id="userProductChoice"></span>:
+        <span id="userExperience"></span>
       </p>
     </div>
     <script src="./product_survey.js"></script>
