--- a/mod2/employeeDetails/employee_details.html
+++ b/mod2/employeeDetails/employee_details.html
@@ -13,6 +13,9 @@
       </button>
       <button onclick="displayHREmployees()">Display HR Employees</button>
       <button onclick="findEmployeeById(2)">Find Employee by ID 2</button>
+      <button onclick="findEmployeeBySpec('JavaScript')">
+        Find Employee by Specialization-JavaScript
+      </button>
     </div>
 
     <div id="employeesDetails"></div>
